# isp-trace-parser

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  benchmarking_read_methods.py  create_parquets_for_benchmarking.py  create_trace_mapping.py  draft_solar_generator_mapping.yaml  generator_to_trace_draft_mapper.py  noxfile.py  pyproject.toml  solar_rez_mapping.yaml  unpack_helper.py
.github/workflows/: cicd.yml
docs/adr/: 001-trace-name-mapping.md
example_parsed_data/solar/RefYear2011/Project/Adelaide_Desalination_Plant_Solar_Farm/: RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2021-2.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2022-1.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2022-2.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2023-1.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2023-2.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2024-1.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2024-2.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2025-1.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2025-2.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2026-1.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2026-2.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2027-1.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2027-2.parquet  RefYear2011_Adelaide_Desalination_Plant_Solar_Farm_FFP_HalfYear2028-1.parquet  (+54 more)
src/isp_trace_name_mapping_configs/: solar_area_mapping.yaml  solar_project_mapping.yaml  solar_zone_mapping.yaml  wind_area_mapping.yaml  wind_project_mapping.yaml
src/isp_trace_parser/: __init__.py  archive.py  construct_reference_year_mapping.py  demand_trace_metadata.py  demand_traces.py  directory_structure_formatter.py  download.py  generator_name_mapping.csv  generator_to_trace_draft_mapper.py  get_data.py  input_validation.py  mapping_loader.py  meta_data_extractors.py  metadata_extractors.py  optimise_parquet.py  resource_trace_metadata.py  solar_traces.py  trace_formatter.py  trace_restructure_helper_functions.py  wind_traces.py
src/isp_trace_parser/manifests/: example_2024.txt
src/isp_trace_parser/mappings/: __init__.py  demand_scenario_mapping.yaml  solar_project_mapping.yaml
src/isp_trace_parser/mappings/2024/: demand.yaml  resources.yaml  topography.yaml
src/isp_trace_parser/remote/: __init__.py  download.py
src/name_mapping/: demand_scenario_mapping.yaml  solar_area_mapping.yaml  wind_area_mapping.yaml  wind_project_mapping.yaml
tests/: conftest.py  create_end_to_end_test_data.py  end_to_end_test_data_config.py  test_demand_trace_metadata.py  test_directory_restructure.py  test_download.py  test_get_data.py  test_input_validation.py  test_mapping_loader.py  test_optimise_parquet.py  test_resource_trace_metadata.py  test_trace_file_meta_data_extraction.py  test_trace_formatter.py  test_trace_parsers.py  test_writing_save_names.py
tests/fixtures/manifests/archive/: test_isp_2024.txt
tests/test_data/output/: RefYear2022_Bodangora_Wind_Farm.parquet  RefYear2022_Broken_Hill_Solar_Farm_FFP.parquet  RefYear2022_N1_WM.parquet  RefYear2022_N2_CST.parquet
tests/test_data/solar/solar_2022/: REZ_N2_New_England_CST_RefYear2022.csv
(+664 files in other folders)
