[project]
name = "isp-trace-parser"
version = "1.0.2"
description = """A Python package for reformatting and accessing demand, solar, and wind time series data used by the
Australian Energy Market Operator in their Integrated System Plan modelling study."""
authors = [
    { name = "nick-gorman", email = "n.gorman305@gmail.com" },
    { name = "prakaa", email = "abiprakash007@gmail.com" },
    { name = "dylanjmcconnell", email = "dylan.mcconnell@unsw.edu.au" }
]
dependencies = [
    "polars>=1.7.1",
    "pandas>=2.2.2",
    "pydantic>=2.9.2",
    "joblib>=1.4.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
dev-dependencies = [
    "ipython>=8.0",
    "ipdb>=0.13.13",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pyarrow>=17.0.0",
    "pre-commit>=3.8.0",
    "nemosis>=3.7.0",
    "isp-workbook-parser>=1.2.0",
    "fuzzywuzzy>=0.18.0",
]

[tool.pytest.ini_options]
# path to tests for pytest
testpaths = ["src", "tests"]
# addopts = add options
# --cov points pytest-cov to the src/ dir
# --cov-branch runs branch coverage
#addopts = "-ra --doctest-modules --cov=src/ --cov-branch --cov-report xml:tests/coverage.xml --cov-report html:tests/htmlcov"

[tool.ruff.lint]
select = [
    # isort
    "I",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
isp_trace_name_mapping_configs = ["**/*.yaml"]
